--- a/DataDeCoded/DataDeCoded.csproj
+++ b/DataDeCoded/DataDeCoded.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="10_Stack_LinkedList_based\" />
+  </ItemGroup>
+
 </Project>
