--- a/DataDeCoded/DataDeCoded.csproj
+++ b/DataDeCoded/DataDeCoded.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="16_HashTable\" />
+    <Folder Include="17_BinaryTree\" />
+  </ItemGroup>
+
 </Project>
